--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ sup {
   overflow: hidden;
   top: 0;
   left: -50%;
-  background: rgba(32, 35, 45, 0.8);
+  background: rgba(0, 4, 18, 0.8);
   width: 100%;
   height: 100%;
   -webkit-transition: all 0.5s cubic-bezier(0.7, 0, 0.3, 1);
@@ -578,7 +578,7 @@ sup {
 /* 3. More informations ................ */
 /* ------------------------------------- */
 #right-side {
-  background: #f2f3f7;
+  background: #fff;
   position: relative;
   overflow: auto;
   -webkit-transform: translate3d(100%, 0, 0);
@@ -605,7 +605,7 @@ sup {
 }
 
 #right-side .content h1, #right-side .content h2, #right-side .content h3, #right-side .content h4, #right-side .content h5, #right-side .content h6 {
-  color: #757A86;
+  color: #ffffff;
 }
 
 #right-side .content h3 {
@@ -623,7 +623,7 @@ sup {
 }
 
 #right-side .content p {
-  color: #747c83;
+  color: #ffffff;
 }
 
 #right-side .content .photo-line figure {
@@ -1313,6 +1313,15 @@ sup {
   -webkit-transition: all 0.7s cubic-bezier(0.42, 0, 0.58, 1);
   transition: all 0.7s cubic-bezier(0.42, 0, 0.58, 1);
 }
+@media (max-width: 992px){
+  .social-icons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: auto;
+  }
+}
 
 .social-icons i {
   color: #FFFFFF;
@@ -1915,4 +1924,162 @@ canvas {
   #subscribe p.notify-valid {
     font-size: 12px;
   }
+}
+
+
+
+/* Arreglos nuevos */
+.btn {
+  border-radius: 2rem;
+  padding: 0.6rem 2rem;
+  font-weight: bold;
+}
+/* Estilos .btn-primary */
+.btn-primario {
+  color: #fff;
+  background-color: transparent;
+  border-color: #4e4ef0;
+  position: relative;
+  overflow: hidden;
+  /* lo encuadra lo que esta alrededor */
+  z-index: 1;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+.btn-primario:hover {
+  color: #fff;
+  background-color: transparent;
+  border-color: #4e4ef0;
+}
+
+.btn-primario:active {
+  color: #35363c !important;
+  background-color: #6666f2 !important;
+  border-color: #7474f3 !important;
+}
+
+.btn-primario:focus {
+  color: #fff;
+  background-color: #23224E;
+  border-color: #6666f2;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(78, 78, 240, 0.5) !important;
+          box-shadow: 0 0 0 0.2rem rgba(78, 78, 240, 0.5) !important;
+  /* importan para que se inponga cuando sea focus y active  */
+}
+
+/* insertamos la flecha del boton principal */
+.btn-primario::after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f138";
+  position: relative;
+  left: 0.7rem;
+  top: 0.05rem;
+  -webkit-transition: left 0.3s ease;
+  transition: left 0.3s ease;
+}
+
+.btn-primario:hover:after,
+.btn-primario:active:after,
+.btn-primario:focus:after {
+  left: 0.25rem;
+}
+
+/* insertamos la caja blanca del boton principal */
+.btn-primario::before {
+  content: "";
+  z-index: -1;
+  width: 0;
+  height: 100%;
+  background: #23224E;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  -webkit-transform: skew(45deg, 0);
+          transform: skew(45deg, 0);
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.btn-primario:hover:before,
+.btn-primario:focus:before,
+.btn-primario:active:before {
+  width: 130%;
+  left: -15%;
+}
+.contenido-block{
+  transition: all .3s ease;
+}
+
+.content-box{
+  background: #23224E !important;
+  border-radius: 20px;
+  transform: rotate(5deg);
+  position: relative;
+  box-shadow: 0 44px 84px 0 rgb(0 0 0 / 45%);
+  z-index: 1;
+  transition: all .3s ease;
+}
+
+
+.sombra{
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 0;
+  width: 90%;
+  height: 100%;
+  background-color: red;
+  border-radius: 20px;
+  transform: rotate(-5deg);
+  background: linear-gradient(267deg, #8129ef, #f83bc3);
+  box-shadow: 0 24px 64px 0 #8129ef;
+  z-index: -2;
+  transition: all .3s ease;
+}
+.contenido-block:hover .content-box{
+  transform: rotate(-8deg);
+}
+.contenido-block:hover .sombra{
+  transform: rotate(8deg);
+}
+.justificado{
+  text-align: justify;
+}
+
+.section-title {
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.section-title h2 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+  color: #fff;
+}
+
+.section-title h2::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 120px;
+  height: 1px;
+  background: #ddd;
+  bottom: 1px;
+  left: calc(50% - 60px);
+}
+
+.section-title h2::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: #fff;
+  bottom: 0;
+  left: calc(50% - 20px);
 }
